<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#00aeef">
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="System alert"
        android:textColor="#fff"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/txtDialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" 
        android:padding="15dp"
        android:textColor="#333"
        android:background="#fff"
        android:minHeight="80dp"
        android:textSize="12sp"/>    <Button
        android:id="@+id/btnYes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnYes"
        android:textColor="#fff" />
    <Button
        android:id="@+id/btnNo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNo"
        android:textColor="#fff" />

</LinearLayout>