<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wrap4"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_text"
        android:orientation="vertical" >

        <!-- TOP BAR -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="82"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="47"
                android:background="#00000000"
                android:contentDescription="@string/app_name"
                android:onClick="onClickBack"
                android:scaleType="centerInside"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/lbHeader"
                style="@style/lbLevel"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="546"
                android:gravity="center"
                android:text="@string/lbRanking" />

            <ImageButton
                android:id="@+id/btnOption"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="47"
                android:background="#00000000"
                android:contentDescription="@string/app_name"
                android:onClick="onClickOption"
                android:scaleType="centerInside"
                android:src="@drawable/option" />
        </LinearLayout>
        <!-- END TOP BAR -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="878"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/lbName"
                    style="@style/lbRank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:text="@string/lbName" />

                <TextView
                    android:id="@+id/txtName"
                    style="@style/lbRank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="right"
                    android:text="@string/lbZero" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/lbLevel"
                    style="@style/lbRank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:text="@string/lbBestLevel" />

                <TextView
                    android:id="@+id/txtLevel"
                    style="@style/lbRank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="right"
                    android:text="@string/lbZero" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
	<com.google.ads.AdView
	    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	    android:id="@+id/adView"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom"
	    ads:adSize="BANNER"
	    ads:adUnitId="ca-app-pub-5628093915644144/8967263316"
	    ads:testDevices="TEST_EMULATOR,0913991912"/>
</FrameLayout>