<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wrap5"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_text"
        android:orientation="vertical"
        tools:context=".OptionActivity" >

        <!-- TOP BAR -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="82"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="47"
                android:background="#00000000"
                android:onClick="onClickBack"
                android:scaleType="centerInside"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/lbHeader"
                style="@style/lbLevel"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="546"
                android:gravity="center"
                android:text="@string/lbOption" />

            <ImageButton
                android:id="@+id/btnOption"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="47"
                android:background="#00000000"
                android:onClick="onClickOption"
                android:scaleType="centerInside"
                android:src="@drawable/option" />
        </LinearLayout>
        <!-- END TOP BAR -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="878"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:orientation="horizontal" >
                <TextView android:id="@+id/lbLanguage"
                    style="@style/lbRank"
                    android:text="@string/lbLanguage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView android:id="@+id/txtLanguage"
                    style="@style/lbRank"
                    android:text="@string/txtLanguage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="9dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:orientation="horizontal" >
                <TextView android:id="@+id/lbSound"
                    style="@style/lbRank"
                    android:text="@string/lbSound"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <CheckBox android:id="@+id/cbSound"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="onClickSound"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
	<com.google.ads.AdView
	    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	    android:id="@+id/adView"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom"
	    ads:adSize="BANNER"
	    ads:adUnitId="ca-app-pub-5628093915644144/8967263316"
	    ads:testDevices="TEST_EMULATOR,0913991912"/>
</FrameLayout>